update: optimize code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="csv_file_name">wavelengthDataset.csv</string>
 
     <string-array name="sex">
+        <item>---</item>
         <item>Male</item>
         <item>Female</item>
         <item>Other</item>
