--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="error_bluetooth_not_supported">BLE is not supported</string>
     <string name="unknown_device">Unknown device</string>
+    <string name="title_activity_slash_screen">SlashScreen</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
 
 </resources>
