update: Design UI/UX History of Data activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="app_script_url">"https://script.google.com/macros/s/AKfycbz-rAqupPrxGvLU77kRXdGvv9THJOGMJ1bn-sjKCgIClMPUBABSLLigcpqs6E_cENw/exec?"</string>
     <string name="csv_file_name">wavelengthDataset.csv</string>
-
+    <string name="dataset">Dataset + Accucheck.csv</string>
     <string-array name="sex">
         <item>---</item>
         <item>Male</item>
